Updated create_project
